Update banner logos and fix minor layout bugs

--- a/static/less/ach-debits.less
+++ b/static/less/ach-debits.less
@@ -134,7 +134,7 @@ body.layout-v4 {
                     color: @white;
                     display: block;
                     cursor: pointer;
-                    padding: 18px 13px 18px 0px;
+                    padding: 18px 8px 18px 0px;
                 }
 
                 &.active {
